# sap-workflow-mining

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cli.sh  docker-compose.yml
.github/workflows/: ci.yml
demos/: ask_process_bpi_demo.ts  ask_process_demo.ts  check_conformance_bpi_demo.ts  check_conformance_demo.ts  export_ocel_demo.ts  predict_outcome_bpi_demo.ts  predict_outcome_demo.ts  visualize_process_demo.ts
docs/: adapter_guide.md  architecture.md  join_maps.md  limitations.md  threat_model.md
mcp-server/: .dockerignore  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
mcp-server/src/__tests__/: ask_process.test.ts  check_conformance.test.ts  export_ocel.test.ts  predict_outcome.test.ts  (+1 more)
mcp-server/tests/: tools.test.ts
output/: bpi_2019_ocel.json  clustering_summary.json  correlation_stats.json  evidence_ledger.json  pattern_cards.json  pattern_cards.md  process_map_50.dot  process_map_50.mmd  process_map_main_path_50.dot  process_map_main_path_50.mmd
pattern-engine/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
pattern-engine/src/: __init__.py  __main__.py  main.py
pattern-engine/src/cluster/: __init__.py  text_clusterer.py
pattern-engine/src/conformance/: __init__.py  checker.py  deviations.py  models.py
pattern-engine/src/conformance/templates/: __init__.py  order_to_cash.py
pattern-engine/src/correlate/: __init__.py  outcome_analyzer.py
pattern-engine/src/ingest/: __init__.py  loader.py
pattern-engine/src/normalize/: __init__.py  text_processor.py
pattern-engine/src/ocel/: __init__.py  exporter.py  object_types.py  relationships.py
pattern-engine/src/prediction/: __init__.py  alerts.py  features.py  models.py
pattern-engine/src/redaction/: __init__.py  redactor.py
pattern-engine/src/report/: __init__.py  evidence_ledger.py  generator.py  pattern_card.py
pattern-engine/src/visualization/: __init__.py  bottleneck.py  graphviz.py  mermaid.py
pattern-engine/test_output/: clustering_summary.json  correlation_stats.json  evidence_ledger.json  pattern_cards.json  pattern_cards.md
pattern-engine/tests/: __init__.py  conftest.py  test_clustering.py  test_conformance.py  test_correlation.py  test_ocel.py  test_prediction.py  test_redaction.py  test_visualization.py
synthetic-data/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
synthetic-data/sample_output/: customers.json  goods_receipts.json  invoice_receipts.json  materials.json  mm_materials.json
synthetic-data/src/: __init__.py  config.py  generate_mm.py  generate_sd.py
synthetic-data/templates/: delivery_schema.json  doc_flow_schema.json  invoice_schema.json  master_data.json  sales_order_schema.json
viewer/: .dockerignore  Dockerfile  package.json
viewer/public/: app.js  index.html  styles.css
viewer/src/: server.js
(+54 files in other folders)
