[project]
name = "sap-sd-synthetic-data"
version = "1.0.0"
description = "Synthetic data generator for SAP SD (Sales & Distribution) documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SAP Workflow Mining Team"}
]
keywords = ["sap", "synthetic-data", "sales-distribution", "workflow-mining"]

dependencies = [
    "faker>=22.0.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
generate-sd = "src.generate_sd:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
